<resources>
    <string name="app_name">My First Kotlin App</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="some_id">13+</string>
    <string name="tag">Action, Adventure, Fantasy</string>
    <string name="reviews_name">125 Reviews</string>
    <string name="storyline_name">Storyline</string>
    <string name="after_the_d">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="heading">Cast</string>
    <string name="robert_down">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffal">Mark Ruffalo</string>
    <string name="chris_hemsw">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="location_search">Movies list</string>
    <string name="reviews_list_name">125 Reviews</string>
    <string name="tag_list">Action, Adventure, Drama</string>
    <string name="name_list">Avengers: End Game</string>
    <string name="length_list">137 min</string>
    <string name="tab_label_popular">Popular</string>
    <string name="tab_label_now_playing">Now playing</string>
    <string name="tab_label_top_rated">Top rated</string>
    <string name="tab_label_upcoming">Upcoming</string>
    <string name="search_movies">Search movies</string>
    <string name="no_data_loaded">No data loaded</string>
    <string name="channel_new_messages">New movie suggestions</string>
    <string name="channel_new_messages_description">All new movies suggestions.</string>
    <string name="notification_title">Top movie for a weekend</string>

    <string name="permission_dialog_explanation_text">To continue please grant access to write calendar events</string>
    <string name="permission_dialog_denied_text">This feature is not available without write to calendar permissions. Open app settings?</string>
    <string name="permission_not_granted_text">Calendar write permission not granted</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="schedule_btn">Schedule</string>
    <string name="details_shared_container">DetailsSharedContainer</string>

</resources>